syntax = "proto3";
package radixox;

// ============================================================================
// REQUEST MESSAGES
// ============================================================================

// Main request envelope
message NetCommand {
  uint64 request_id = 1;
  oneof net_action {
    NetSetRequest set = 2;
    NetGetRequest get = 3;
    NetGetNRequest getn = 4;
    NetDelRequest del = 5;
    NetDelNRequest deln = 6;
  }
}

// Single key operations
message NetSetRequest {
  bytes key = 1;
  bytes value = 2;
}

message NetGetRequest { bytes key = 1; }
message NetDelRequest { bytes key = 1; }

// Prefix-based operations (implicit wildcard suffix: "user" matches "user:*")
message NetGetNRequest { bytes prefix = 1; }
message NetDelNRequest { bytes prefix = 1; }

// ============================================================================
// RESPONSE MESSAGES
// ============================================================================

// Main response envelope
message NetResponse {
  uint64 request_id = 1;
  oneof net_response_result {
    NetErrorResponse error = 2;
    NetSuccessResponse success = 3;
  }
}

message NetErrorResponse { string message = 2; }

message NetSuccessResponse {
  oneof body {
    bytes single_value = 1;           // Response for GET
    NetMultiValueResponse multi_value = 2;  // Response for GETN
  }
}

// Multi-value response for pattern operations
message NetMultiValueResponse { repeated bytes values = 1; }